[fix]Add word-wrap: break-word to code tag

--- a/packages/blog/components/_global.scss
+++ b/packages/blog/components/_global.scss
@@ -72,6 +72,7 @@ code {
   border-radius: 4px;
   background-color: $inline-code-background;
   color: $inline-code-text;
+  word-wrap: break-word;
 }
 img {
   max-width: 100%;
